fixing responsive issue on mobiles

--- a/public/global.css
+++ b/public/global.css
@@ -22,7 +22,7 @@
 		line-height: 1rem;
 	}
 	h1 {
-		@apply text-6xl;
+		@apply text-4xl md:text-5xl lg:text-6xl;
 	}
 	h2 {
 		@apply text-5xl;
